--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.14",
+    "@types/jest": "^29.5.14",
     "@types/node": "20.2.5",
     "@types/react": "18.2.37",
     "@types/react-dom": "^18.2.18",
+    "jest": "^29.7.0",
     "postcss": "^8.5.3",
+    "ts-jest": "^29.2.6",
     "typescript": "^5.3.3"
   }
 }
