--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.1.0",
     "tailwindcss": "^3.4.1"
   },
